# gameshell

./: Cargo.toml  README.md
benches/: basic.rs
crates/cmdmat/: Cargo.toml  lib.rs
crates/metac/: Cargo.toml  lib.rs
src/: applicator.rs  decision.rs  evaluator.rs  feedback.rs  incconsumer.rs  lib.rs  predicates.rs  types.rs
