[package]
name = "gameshell"
version = "0.1.0"
authors = ["Kevin Robert Stravers <macocio@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.10"
cmdmat = { path = "crates/cmdmat" }
either = "1.5.0"
metac = { path = "crates/metac" }
quickcheck = { version = "0.8", optional = true }
quickcheck_macros = { version = "0.8", optional = true }
rand = "0.6"
regex = "1.1.7"

[dev-dependencies]
criterion = "0.2"
crossbeam-channel = "0.3.8"
quickcheck = "0.8"
quickcheck_macros = "0.8"

[[bench]]
name = "basic"
harness = false

[features]
default = []
with-quickcheck = ["quickcheck", "quickcheck_macros"]
