[package]
name = "gameshell"
version = "0.1.0"
authors = ["Kevin Robert Stravers <macocio@gmail.com>"]
description = "Simple lisp/bash-like shell to integrate into programs"
keywords = ["language", "interpreter", "lisp", "bash"]
edition = "2018"
homepage = "https://docs.rs/gameshell"
repository = "https://github.com/Omen-of-Aecio/gameshell"
license = "LGPL-3.0-or-later"

[dependencies]
base64 = "0.10.1"
cmdmat = "0.1.1"
metac = "0.1.0"
quickcheck = { version = "0.8", optional = true }
quickcheck_macros = { version = "0.8", optional = true }
rand = "0.6"
regex = "1.1.7"

[dev-dependencies]
criterion = "0.3"
crossbeam-channel = "0.3.8"
quickcheck = "0.8"
quickcheck_macros = "0.8"

[features]
default = []
with-quickcheck = ["quickcheck", "quickcheck_macros"]

[[bench]]
name = "basic"
harness = false
