[package]
name = "gameshell"
version = "0.2.0"
authors = ["Kevin Robert Stravers <macocio@gmail.com>"]
description = "Simple lisp/bash-like shell to integrate into programs"
keywords = ["language", "interpreter", "lisp", "bash"]
edition = "2018"
homepage = "https://docs.rs/gameshell"
repository = "https://github.com/Omen-of-Aecio/gameshell"
license = "LGPL-3.0-or-later"

[dependencies]
base64 = "0.11.0"
cmdmat = "0.1.2"
metac = "0.1.1"
quickcheck = { version = "0.9.2", optional = true }
quickcheck_macros = { version = "0.9.1", optional = true }
rand = { version = "0.7.3", optional = true }
regex = "1.3.4"
slog = { version = "2.5.2", optional = true }
tokio = { version = "0.2.11", features = ["io-util", "net", "rt-core"], optional = true }

[dev-dependencies]
criterion = "0.3.1"
crossbeam-channel = "0.4.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand = "0.7.3"

[features]
default = []
with-quickcheck = ["quickcheck", "quickcheck_macros", "rand"]
with-tokio = ["slog", "tokio"]

[[bench]]
name = "basic"
harness = false
